--- a/src/components/common/notification-drawer/notificationdrawer.scss
+++ b/src/components/common/notification-drawer/notificationdrawer.scss
@@ -1,3 +1,8 @@
-.notification-no {
-    width: 16rem;
+.no-notification-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .notification-no-img {
+        width: 16rem;
+    }
 }
