--- a/src/components/common/status-header/StatusHeader.scss
+++ b/src/components/common/status-header/StatusHeader.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/colors.scss";
+@import "../../../styles/variables";
 
 .status-header-container {
     display: flex;
@@ -16,6 +16,10 @@
       text-align: left;
       padding: 1.5rem 1rem;
       color: $LABEL_TEXT_COLOR;
+      .status-item-label {
+        font-size:small;
+        margin-bottom:.5;
+      }
     }
   }
 
@@ -28,9 +32,10 @@
       margin-right: 1rem;
       background-color: $GREEN;
     }
-    #dropdownMenuButton1 {
+    .gButtonGroup {
       padding: 0.2rem 2rem;
       background-color: $PRIMARY_BLUE;
+      color: white;
     }
   }
 }
