--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,9 @@
 
+// Colors Starts //
+
 $GREEN :rgb(96, 189, 84);
 $PRIMARY_BLUE : #1976d2;
 $GRAY_BACKGROUND: #f0f0f0;
 $LABEL_TEXT_COLOR: #777777;
+
+// Colors Ends //
