--- a/src/components/common/date-picker/g-date-picker.scss
+++ b/src/components/common/date-picker/g-date-picker.scss
@@ -16,4 +16,7 @@
     .react-datepicker-popper{
         z-index: 1000;
     }
+    .react-datepicker__navigation-icon::before{
+        top:13px;
+    }
 }
