Status component corrections

--- a/src/components/common/status/status.scss
+++ b/src/components/common/status/status.scss
@@ -15,9 +15,16 @@
             cursor: initial;
         }
 
+        .btn-rejected {
+            background-color: #E25959;
+            color: white;
+        }
+
         .btn-over-run {
             background-color: #C11C66;
             color: white;
         }
+
+
     }
 }
