--- a/src/components/common/select/g-select.scss
+++ b/src/components/common/select/g-select.scss
@@ -2,16 +2,18 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    min-width: 7.5rem;
+    min-width: 8.3rem;
     label{
         margin: .5rem 0 0.2rem 0;
     }
     fieldset{
         border: none;
     }
-    .MuiSelect-select.MuiInputBase-input{
-        padding: 6px 12px;
-        text-align: left;
+    .MuiSelect-select{
+        &.MuiInputBase-input{
+            padding: 6px 12px;
+            text-align: left;
+        }
     }
     .MuiOutlinedInput-root{
         border: 1px solid #ccc;
