--- a/src/components/common/select/g-select.scss
+++ b/src/components/common/select/g-select.scss
@@ -18,4 +18,8 @@
     .MuiOutlinedInput-root{
         border: 1px solid #ccc;
     }
+    .dropdown-button{
+        background-color: transparent;
+        color: gray;
+    }
 }
