date picker update

--- a/src/components/booking-view/request-new/request-new.scss
+++ b/src/components/booking-view/request-new/request-new.scss
@@ -5,7 +5,7 @@
         }
     }
     input{
-        padding: 2px;
+        //padding: 2px;
         border: 1px solid gray;
         border-radius: 4px;
     }
