--- a/src/components/admin-view/admin-view.scss
+++ b/src/components/admin-view/admin-view.scss
@@ -2,28 +2,9 @@
   text-align: left;
 }
 
-.reports-view {
-  .heading {
-    text-align: left;
-  }
-  .sub-section {
-    display: flex;
-    flex-direction: column;
-    .heading {
-      text-align: left;
-      margin-top: 1rem;
-    }
-    .item {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      .item-checkbox {
-        padding-left: 0;
-        left: -0.2em;
-      }
-    }
-  }
-  .update-changes {
-    display: flex;
+.admin-view{
+  .add-button{
+    margin: 1rem 0;
+    float: left;
   }
 }
