--- a/src/components/common/drawer/g-drawer.scss
+++ b/src/components/common/drawer/g-drawer.scss
@@ -1,5 +1,5 @@
 .main-component{
-    height: 100vh;
+    height: calc(100vh - 4rem);
     display: flex; 
     padding-top: 40px;
     flex: 1 1 auto;
