grantt chart integrations completed

--- a/src/components/grant-chart-view/grantt-chart/index.scss
+++ b/src/components/grant-chart-view/grantt-chart/index.scss
@@ -37,7 +37,7 @@
             display: flex;
             width: 30%;
             border: 1px solid grey;
-            padding: 3px 0px 3px 0px;
+            padding: 3px 5px 3px 5px;
             .single-row-left-text{
                 width: 33%;
             }
@@ -48,8 +48,8 @@
             border-width: 1px 1px 1px 0px;
             border-color: grey;
             border-style: solid;
-            justify-content: space-around;
-            padding: 3px 0px 3px 0px;
+            justify-content: space-between;
+            padding: 3px 5px 3px 5px;
         }
         .single-row-left-box{
             border-width: 0px 1px 1px 1px;
@@ -69,8 +69,9 @@
             border-width: 0px 1px 1px 0px;
             border-color: grey;
             border-style: solid;
-            padding: 3px 0px 3px 0px;
+            padding: 3px 5px 3px 5px;
             position: relative;
+            overflow: hidden;
             .timing-box{
                 position: absolute;
                 border-radius: 5px;
@@ -78,4 +79,14 @@
             }
         }
     }
+}
+
+.no-data{
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-color: grey;
+    border-width: 0px 1px 1px 1px;
+    border-style: solid;
 }
