--- a/src/components/grant-chart-view/grantt-chart/index.scss
+++ b/src/components/grant-chart-view/grantt-chart/index.scss
@@ -32,14 +32,14 @@
     .single-row{
         display: flex;
         flex-direction: row;
-        height: 30px;
+        min-height: 30px;
         .single-row-left{
             display: flex;
             width: 30%;
             border: 1px solid grey;
             padding: 3px 5px 3px 5px;
             .single-row-left-text{
-                width: 33%;
+                width: 50%;
             }
         }
         .single-row-right{
@@ -75,7 +75,7 @@
             .timing-box{
                 position: absolute;
                 border-radius: 5px;
-                height: 24px;
+                height: 86%;
             }
         }
     }
